<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="portfolio_title">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>

    <string name="app_spotifystreamer">SPOTIFY STREAMER</string>
    <string name="app_scores">SCORES APP</string>
    <string name="app_library">LIBRARY APP</string>
    <string name="app_bigger">BUILD IT BIGGER</string>
    <string name="app_reader">XYZ READER</string>
    <string name="app_capstone">CAPSTONE: MY OWN APP</string>
</resources>
