<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/portfolio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"/>
    
    <Button
        android:id="@+id/button_spotify"
        style="@style/PortfolioButton"
        android:text="@string/app_spotifystreamer"
        android:onClick="openSpotifyStreamer"/>

    <Button
        android:id="@+id/button_scores"
        style="@style/PortfolioButton"
        android:text="@string/app_scores"
        android:onClick="openScores"/>

    <Button
        android:id="@+id/button_library"
        style="@style/PortfolioButton"
        android:text="@string/app_library"
        android:onClick="openLibrary"/>

    <Button
        android:id="@+id/button_bigger"
        style="@style/PortfolioButton"
        android:text="@string/app_bigger"
        android:onClick="openBuildItBigger"/>

    <Button
        android:id="@+id/button_reader"
        style="@style/PortfolioButton"
        android:text="@string/app_reader"
        android:onClick="openReader"/>

    <Button
        android:id="@+id/button_capstone"
        style="@style/PortfolioButton"
        android:text="@string/app_capstone"
        android:onClick="openCapstone"
        android:background="#FF4081"/>

</LinearLayout>
